# superclcbros

./: .clang-format  CMakeLists.txt  README.md
assets/: A._Terrain.csv  A_Background.csv  A_Entities.csv  A_Terrain.csv  B_Background.csv  B_Entities.csv  B_Info.txt  B_Terrain.csv  animations.txt  readme.txt  testLevel._Terrain.csv  test_tilemap.txt
assets/level editor data/A/: A.tmx  entity_spawn_markers.tsx  objects.tsx
assets/level editor data/B/: B.tmx
docs/: design-patterns-or-something.md
src/: Definitions.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Settings.cpp  Settings.h  TextureManager.cpp  TextureManager.h  main.cpp
src/Entity/: Enemy.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  Mario.cpp  Mario.h  PhysicsEngine.cpp  PhysicsEngine.h  PickupItem.h  Player.cpp  Player.h  TileMap.cpp  TileMap.h
src/Entity/Animation/: Animation.cpp  AnimationHandler.cpp  AnimationHandler.h  AnimationManager.cpp  AnimationManager.h  DeadAnimationHandler.cpp  DeadAnimationHandler.h  IdleAnimationHandler.cpp  IdleAnimationHandler.h  JumpAnimationHandler.cpp  JumpAnimationHandler.h  WalkAnimationHandler.cpp  WalkAnimationHandler.h
src/Entity/Controller/: EntityController.h  PlayerController.cpp  PlayerController.h  SimpleAIController.cpp  SimpleAIController.h
src/Entity/Enemy/: Enemy.cpp  Enemy.h  Goomba.cpp  Goomba.h  Piranha.cpp  Piranha.h
src/Entity/Misc/: Flag.cpp  Flag.h
src/Entity/Pickup/: CoinItem.cpp  CoinItem.h  LuckyBlock.cpp  LuckyBlock.h  MushroomItem.cpp  MushroomItem.h  OneUpItem.cpp  OneUpItem.h  PickupItem.cpp  PickupItem.h
src/Entity/Player/: Luigi.cpp  Luigi.h  Mario.cpp  Mario.h  Player.cpp  Player.h
src/Entity/TileMap/: TileMap.cpp  TileMap.h
src/Keyboard/: Keyboard.cpp  Keyboard.h
src/Observer/: Observer.h  Signal.cpp  Signal.h  Signal.inl  Slot.h  Subject.cpp  Subject.h
src/State/: State.h  StateMenu.cpp  StateMenu.h  StatePlay.cpp  StatePlay.h  StateSelectPlayer.cpp  StateSelectPlayer.h  StateSelectStage.cpp  StateSelectStage.h  StateSettings.cpp  StateSettings.h  StateStart.cpp  StateStart.h
src/Utility/: Animation.cpp  Animation.h  AssetManager.h  AssetManager.inl  CSVMapLoader.cpp  CSVMapLoader.h  Direction.h  MusicManager.h  NonCopyable.h  ServiceLocator.h  ServiceLocator.inl  SoundManager.cpp  SoundManager.h  TextureManager.h
